--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-date-picker": "^5.0.10",
     "react-native-image-picker": "^8.1.0",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.0",
